--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,3 +25,9 @@ body {
     @apply font-brand font-semibold text-base text-white;
   }
 }
+
+@layer utilities {
+  .text-shadow {
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.1);
+  }
+}
