feat: adds text-shadow-sm utility class

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,6 +27,10 @@ body {
 }
 
 @layer utilities {
+  .text-shadow-sm {
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.1);
+  }
+
   .text-shadow {
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.1);
   }
