--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,6 +17,10 @@ body {
 }
 
 @layer components {
+  .text-heading-primary {
+    @apply font-brand font-bold text-blue-600 text-4xl text-shadow;
+  }
+
   .text-heading-secondary {
     @apply font-brand font-bold text-purple-600 text-4xl text-shadow;
   }
